fix bug $change style
fix nav bar overlap problem and change top button style

--- a/hll.css
+++ b/hll.css
@@ -25,6 +25,7 @@ a {
     background-position: top right;
     padding: 0.5rem 1.3rem;
     align-items: center;
+    z-index: 99;
 }
 #logo img{
     width: 2rem;
@@ -219,20 +220,19 @@ p{
 #myBtn {
     display: none;
     position: fixed;
-    bottom: 20px;
-    right: 30px;
+    bottom: 1rem;
+    right: 1.5rem;
     z-index: 99; /* Make sure it does not overlap */
     border: none;
     outline: none;
     background-color: rgba(50,50,50,0.5); 
     color: whitesmoke; /* Text color */
     cursor: pointer; /* Add a mouse pointer on hover */
-    padding: 15px; /* Some padding */
-    border-radius: 10px; /* Rounded corners */
-    font-size: 18px; /* Increase font size */
+    padding: 0.5rem; /* Some padding */
+    border-radius: 0.5rem; /* Rounded corners */
+    font-size: 1rem; /* Increase font size */
     transition: ease 1s;
 }
-  
 #myBtn:hover {
     background-color: #555; /* Add a dark-grey background on hover */
 }
